# orbs

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
data/: lowmass_33.hdf5  lowmass_40.hdf5  lowmass_50.hdf5  lowmass_z1.hdf5  lowmass_z1p5.hdf5  merged-fraction_33.hdf5  merged-fraction_40.hdf5  merged-fraction_50.hdf5  orbitdata_33.hdf5  orbitdata_40.hdf5  orbitdata_50.hdf5
notebooks/: 1_merged-fraction.ipynb  2_pull-orbits.ipynb  3_timescale-analysis-first-steps.ipynb  3_timescale-hists.ipynb  4_timescale-cumulative.ipynb  4_timescales.ipynb  5_catalog-of-interesting-pairs.ipynb  5_define_beginning.ipynb  5_methods.ipynb  6_cumulative_time_spent.ipynb  9_cumulative_median.ipynb  explore-z1group.ipynb  explore-z1p5group.ipynb  get_dwarf_sample.ipynb  test_check-gal-size.ipynb  test_check-separation-units.ipynb  test_define_beginning.ipynb  test_mergercomparison-z1p5.ipynb  test_mergerhist.ipynb  test_mergertrees.ipynb  test_timescales-and-histograms.ipynb  test_timescales.ipynb
notebooks/bet-on-it/: 10_linearfits.ipynb  1_merger-fraction.ipynb  2_elapsedtime.ipynb  2_timescales.ipynb  3_time-of-merger.ipynb  3_timetilmerger.ipynb  4_interpolation.ipynb  4_methods.ipynb  5_exampleorbits.ipynb  5_methodology.ipynb  6_sampleproperties.ipynb  7_results-tabledata.ipynb  8_results-plots.ipynb  9_discussion.ipynb
notebooks/big-bad/: bb1_make_catalogs.ipynb  bb2_pull-orbits.ipynb  bb3_hists.ipynb  (+1 more)
paper/: backup.bib  main.tex  math_definitions.tex  notes_for_intro.tex  oldplots.tex  refs.bib  sample631.tex  table-septime.tex  table-slopes.tex
(+13 files in other folders)
