[orbits]
name = "orbs"
version = 0.0.1
authors = [ {name="Katie Chamberlain",email="katiechambe@arizona.edu} ]
description = "Get subhalo orbits from Illustris and TNG"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/katiechambe/orbs"